--- a/poudre-dashboard-ng/src/assets/leaflet/css/leaflet.css
+++ b/poudre-dashboard-ng/src/assets/leaflet/css/leaflet.css
@@ -389,8 +389,8 @@
 
 /* Default icon URLs */
 .leaflet-default-icon-path {
-	background-image: url(images/marker-icon.png);
-	}
+	background-image: url(leaflet/marker-icon.png);
+}
 
 
 /* attribution and scale controls */
