removed home component and made home a generic page

--- a/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.html
+++ b/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-xl navbar-light bg-light py-0">
-  <a class="navbar-brand" routerLink="/home">{{title}}</a>
+  <a class="navbar-brand" routerLink="/generic-page/home">{{title}}</a>
 
   <!-- Hamburger Icon -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
