added basic symbol explanations to legend

--- a/poudre-dashboard-ng/src/app/map-components/map-layer-control/map-layer.component.css
+++ b/poudre-dashboard-ng/src/app/map-components/map-layer-control/map-layer.component.css
@@ -24,6 +24,11 @@
     border-style: none;
   }
 
+
+  .layer-icon {
+    margin-left:5px;
+  }
+
   /* styling for the swtich background */
   .switch {
     position: relative;
