--- a/poudre-dashboard-ng/src/app/map-components/map-layer-control/map-layer.component.html
+++ b/poudre-dashboard-ng/src/app/map-components/map-layer-control/map-layer.component.html
@@ -1,7 +1,22 @@
 <tr>
     <td class="name">
 
-      {{data.displayName}}
+      <div id="layer-title" style="float:left;">
+        {{data.displayName}} 
+      </div>
+      <div *ngIf="symbol.shapetype=='line'">
+        <svg class="layer-icon" height="10" width="25">
+          <line x1="5" y1="5" x2="25" y2="5" [ngStyle]="{'stroke':symbol.color}" style="stroke-width:2" />
+        </svg>
+      </div>
+      <div *ngIf="symbol.shapetype=='polygon'">
+        <svg class="layer-icon"height="15" width="15">
+          <rect width="15" height="15" [ngStyle]="{'fill':symbol.color}"></rect>
+        </svg>
+      </div>
+      <div *ngIf="symbol.shapetype=='marker'">
+        <img class="layer-icon" src="assets/leaflet/css/images/marker-icon.png" height="15">
+      </div>
 
       <div class="description">{{data.description}}</div>
 
