--- a/poudre-dashboard-ng/src/app/map-components/map.component.html
+++ b/poudre-dashboard-ng/src/app/map-components/map.component.html
@@ -66,6 +66,7 @@
                                         <hr>
 
                                         <ng-template map-layer-hook></ng-template>
+                                        <ng-template legend-symbol-hook></ng-template>
                 
                                     </table>
                               </div>
