updated legend to handle different shapes, and colors, and types of coloring applied

--- a/poudre-dashboard-ng/src/app/map-components/map-layer-control/map-layer.component.css
+++ b/poudre-dashboard-ng/src/app/map-components/map-layer-control/map-layer.component.css
@@ -3,7 +3,6 @@
   td {
     width: 100%;
     text-align: left;
-    font-weight: bold;
     padding: 5px;
     border-style: none;
   }
@@ -27,6 +26,12 @@
 
   .layer-icon {
     margin-left:5px;
+  }
+
+  #layer-title {
+    font-size:12px;
+    font-weight: bold;
+    text-decoration: underline;
   }
 
   /* styling for the swtich background */
