--- a/poudre-dashboard-ng/src/app/map-components/map-error/map-error.component.css
+++ b/poudre-dashboard-ng/src/app/map-components/map-error/map-error.component.css
@@ -1,8 +1,6 @@
-#errorPage {
-    font-size: 30px;
-    text-align: center;
-    margin-top: 100px;
-  }
+#map-error {
+  height:100vh;
+}
 
 h1 {
   font-size:5rem !important;
