added additional logic for displaying and not displaying symbols and description

--- a/poudre-dashboard-ng/src/app/map-components/background-layer-control/background-layer.component.html
+++ b/poudre-dashboard-ng/src/app/map-components/background-layer-control/background-layer.component.html
@@ -2,7 +2,7 @@
     <input type="radio" id="{{data.name}}-radio" name="background-layer" value="{{data.name}}" (click)="selectBackgroundLayer()">
     <td class="name">
       {{data.name}}
-      <div class="description">{{data.description}}</div>
+      <div class="background-map-description">{{data.description}}</div>
     </td>
 </tr>
 <br/>
