attempting to fix issue with toggle layers v. hide all/show all layers

--- a/poudre-dashboard-ng/src/app/map-components/map-layer-control/map-layer.component.css
+++ b/poudre-dashboard-ng/src/app/map-components/map-layer-control/map-layer.component.css
@@ -88,9 +88,9 @@
   input:checked + .slider {
     background-color: #2196F3;
   }
-  input:focus + .slider {
+  /* input:focus + .slider {
     box-shadow: 0 0 1px #2196F3;
-  }
+  } */
   input:checked + .slider:before {
   content: "|";
     -webkit-transform: translateX(20px);
