Updated README.md content for readers' future understanding

--- a/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.html
+++ b/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.html
@@ -8,6 +8,7 @@
 
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mr-auto">
+      <!-- Apply the nav-host selector for Angular to know where to dynamically load components  -->
       <ng-template nav-host></ng-template>
     </ul>
     <!-- <ul class="navbar-nav m1-auto">
