--- a/poudre-dashboard-ng/src/app/nav-bar/tab/tab.component.html
+++ b/poudre-dashboard-ng/src/app/nav-bar/tab/tab.component.html
@@ -2,6 +2,7 @@
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown">
       {{data.name}}
+      <!-- {{data}} -->
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <div *ngFor="let menu of data.menus;">
