--- a/poudre-dashboard-ng/src/app/map-components/background-layer-control/background-layer.component.html
+++ b/poudre-dashboard-ng/src/app/map-components/background-layer-control/background-layer.component.html
@@ -1,8 +1,8 @@
 <tr>
-    <input type="radio" id="{{data.name}}-radio" name="background-layer" value="{{data.name}}" (click)="selectBackgroundLayer()">
+    <input type="radio" id="{{data.geoLayerId}}-radio" name="background-layer" value="{{data.name}}" (click)="selectBackgroundLayer()">
     <td class="name">
-      {{data.name}}
-      <div class="background-map-description">{{data.description}}</div>
+      <b>{{data.name}}</b>
+      <div class="description">{{data.description}}</div>
     </td>
 </tr>
 <br/>
