--- a/poudre-dashboard-ng/src/app/map-components/map-layer-control/map-layer.component.html
+++ b/poudre-dashboard-ng/src/app/map-components/map-layer-control/map-layer.component.html
@@ -1,4 +1,5 @@
 <tr>
+  <div *ngIf="layerData.geolayerId != undefined; else newConfig">
     <td class="name">
 
       <div id="layer-title">
@@ -12,15 +13,43 @@
       <div class="symbols" id="symbols-{{layerData.geolayerId}}">
         <ng-template legend-symbol-hook></ng-template>
       </div>
-
     </td>
+
     <td class="toggle">
       <label title="Show/hide '{{layerData.displayName}}' layer on the map"  class="switch">
 
         <input id="{{layerData.geolayerId}}-slider" type="checkbox" (click)="toggleLayer()" checked="checked">
         <span class="slider round"></span>
-      </label>
-    </td>
-  </tr>
+        </label>
+      </td>
+  </div>
 
-  <hr>
+  <ng-template #newConfig>
+    <td class="name">
+
+      <div id="layer-title">
+        {{layerData.name}} 
+      </div>
+
+      <div class="description" id="description-{{layerData.geoLayerId}}">{{layerData.description}}</div>
+
+      <br>
+
+      <div class="symbols" id="symbols-{{layerData.geoLayerId}}">
+        <ng-template legend-symbol-hook></ng-template>
+      </div>
+    </td>
+
+    <td class="toggle">
+      <label title="Show/hide '{{layerData.name}}' layer on the map"  class="switch">
+
+        <input id="{{layerData.geoLayerId}}-slider" type="checkbox" (click)="toggleLayer()" checked="checked">
+        <span class="slider round"></span>
+        </label>
+      </td>
+    </ng-template>
+
+</tr>
+
+
+<hr>
