--- a/poudre-dashboard-ng/src/app/map-components/map.component.html
+++ b/poudre-dashboard-ng/src/app/map-components/map.component.html
@@ -1,128 +1,135 @@
 <div id="map-container">
 
-    <!-- optionally define the sidebar content via HTML markup -->
-      <div id="sidebar" class="leaflet-sidebar collapsed">
+  <!-- optionally define the sidebar content via HTML markup -->
+  <div id="sidebar" class="leaflet-sidebar collapsed">
 
-          <!-- nav tabs -->
-          <div class="leaflet-sidebar-tabs">
-              <!-- top aligned tabs -->
-              <ul role="tablist">
-                  <!-- Main menu button (Hamburger Icon) -->
-                  <li><a title="Main tools" href="#home" role="tab"><i class="fa fa-bars active"></i></a></li>
-                  <!-- Autopan button (4 directional arrows) -->
-                  <li><a title="Autopan tools" href="#autopan" role="tab"><i class="fa fa-arrows"></i></a></li>
-                  <!---Information Button (i)-->
-                  <li><a title="Information" href="#information" role="tab"><i class="fa fa-info-circle"></i></a></li>
-              </ul>
+    <!-- nav tabs -->
+    <div class="leaflet-sidebar-tabs">
+      <!-- top aligned tabs -->
+      <ul role="tablist">
+        <!-- Main menu button (Hamburger Icon) -->
+        <li><a title="Main tools" href="#home" role="tab"><i class="fa fa-bars active"></i></a></li>
+        <!-- Autopan button (4 directional arrows) -->
+        <li><a title="Autopan tools" href="#autopan" role="tab"><i class="fa fa-arrows"></i></a></li>
+        <!---Information Button (i)-->
+        <li><a title="Information" href="#information" role="tab"><i class="fa fa-info-circle"></i></a></li>
+      </ul>
 
-              <!-- bottom aligned tabs -->
-              <ul role="tablist">
-                  <li><a title="External link to project on GitHub" href="https://github.com/nickpeihl/leaflet-sidebar-v2"><i class="fa fa-github"></i></a></li>
-              </ul>
-          </div>
+      <!-- bottom aligned tabs -->
+      <ul role="tablist">
+        <li><a title="External link to project on GitHub" href="https://github.com/nickpeihl/leaflet-sidebar-v2"><i class="fa fa-github"></i></a></li>
+      </ul>
+    </div>
 
-          <!-- panel content -->
-          <div class="leaflet-sidebar-content">
-              <div class="leaflet-sidebar-pane" id="home">
-                  <h1 class="leaflet-sidebar-header">
-                      Tools
-                      <span title="Close sidebar" class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
-                  </h1>
+    <!-- panel content -->
+    <div class="leaflet-sidebar-content">
+      <div class="leaflet-sidebar-pane" id="home">
+        <h1 class="leaflet-sidebar-header">
+          Tools
+          <span title="Close sidebar" class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
+        </h1>
 
-                  <br>
+        <br>
 
-                  <div class="accordion" id="sidebar-accordion">
-                      <div class="card">
-                          <div class="card-header" id="layerOptions">
-                              <h5 class="mb-0">
-                                    <button title="Click to expand/collapse layer controls" class="btn btn-link" type="button" data-toggle="collapse" 
-                                        data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        Layers
-                                    </button>
-                              </h5>
-                          </div>
+        <div class="accordion" id="sidebar-accordion">
+          <div class="card">
+              <div class="card-header" id="layerOptions">
+                <h5 class="mb-0">
+                  <button title="Click to expand/collapse layer controls" class="btn btn-link" type="button" data-toggle="collapse" 
+                    data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Layers
+                  </button>
+                </h5>
+              </div>
 
-                          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#sidebar-accordion">
-                              <div class="card-body">
-                                    <table class="layerOptions">
-                                        <p style="margin-bottom:5px;"><b><u>Map Controls:</u></b></p>
-                                        <div id="toggleAll">
-                                            <div class="controlCol">
-                                                <button title="Click to hide/show all the layers on the map" 
-                                                    id="display-button" class="toggleAllButton" (click)="displayAll()">
-                                                    Hide All Layers
-                                                </button>
-                                            </div>
-                                        </div>
-
-                                        <p style="margin-bottom:5px;"><b><u>Legend Controls:</u></b></p>
-                                        <div id="toggleDescription">
-                                            <div id="controlDescription">
-                                                <input title="Show/hide the descriptions under the layer controls" 
-                                                    type="checkbox" name="showDescriptions" (click)="toggleDescriptions()"> 
-                                                    Hide All Descriptions
-                                            </div>
-                                        </div>
-                                        <div id="toggleDescription">
-                                            <div id="controlDescription">
-                                                <input title="Show/hide the symbols under the layer controls" 
-                                                    type="checkbox" name="showSymbols" (click)="toggleSymbols()"> 
-                                                    Hide All Symbols
-                                            </div>
-                                        </div>
-                                        <hr>
-
-                                        <ng-template map-layer-hook></ng-template>
-                
-                                    </table>
-                              </div>
-                          </div>
+              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#sidebar-accordion">
+                <div class="card-body">
+                  <table class="layerOptions">
+                    <p style="margin-bottom:5px;"><b><u>Map Controls:</u></b></p>
+                    <div id="toggleAll">
+                      <div class="controlCol">
+                        <button title="Click to show or hide all layers on the map" 
+                          id="display-button" class="toggleAllButton" (click)="displayAll()">
+                          Hide All Layers
+                        </button>
                       </div>
-                      <div class="card">
-                            <div class="card-header" id="background-layers">
-                                <h5 class="mb-0">
-                                      <button title="Click to expand/collapse basemap layer tools" class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-two"
-                                          aria-expanded="true" aria-controls="collapseOne">
-                                          Basemap Layers
-                                      </button>
-                                </h5>
-                            </div>
-  
-                            <div id="collapse-two" class="collapse show" aria-labelledby="headingOne" data-parent="#background-layers">
-                                <div class="card-body">
-                                    <ng-template background-layer-hook></ng-template>
-                                </div>
-                            </div>
-                        </div>
-                  </div>
+                    </div>
 
+                    <p style="margin-bottom:5px;"><b><u>Legend Controls:</u></b></p>
+                    <div id="toggleDescription">
+                      <div id="controlDescription">
+                        <input title="Show/hide the descriptions under the layer controls" 
+                          type="checkbox" name="showDescriptions" (click)="toggleDescriptions()"> 
+                          Hide All Descriptions
+                      </div>
+                    </div>
+                    <div id="toggleDescription">
+                      <div id="controlDescription">
+                        <input title="Show/hide the symbols under the layer controls" 
+                          type="checkbox" name="showSymbols" (click)="toggleSymbols()"> 
+                          Hide All Symbols
+                      </div>
+                    </div>
+                    <hr>
+
+                    <ng-template map-layer-hook></ng-template>
+
+                  </table>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="background-layers">
+                <h5 class="mb-0">
+                  <button title="Click to expand/collapse basemap layer tools" class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-two"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    Basemap Layers
+                  </button>
+                </h5>
               </div>
 
-              <div class="leaflet-sidebar-pane" id="autopan">
-                  <h1 class="leaflet-sidebar-header">
-                      autopan
-                      <span class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
-                  </h1>
-                  <p>
-                      <code>Leaflet.control.sidebar( autopan: true )</code>
-                      makes sure that the map center always stays visible.
-                  </p>
-                  <p>
-                      The autopan behviour is responsive as well.
-                      Try opening and closing the sidebar from this pane!
-                  </p>
+              <div id="collapse-two" class="collapse show" aria-labelledby="headingOne" data-parent="#background-layers">
+                <div class="card-body">
+                  <ng-template background-layer-hook></ng-template>
+                </div>
               </div>
+            </div>
+        </div>
 
-              <div class="leaflet-sidebar-pane" id="information">
-                  <h1 class="leaflet-sidebar-header">
-                      Information
-                      <span class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
-                  </h1>
-                  <ng-template side-panel-info-host></ng-template>
-              </div>
-          </div>
       </div>
 
-    <div id="mapid"></div>
+      <div class="leaflet-sidebar-pane" id="autopan">
+        <h1 class="leaflet-sidebar-header">
+          autopan
+          <span class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
+        </h1>
+        <p>
+          <code>Leaflet.control.sidebar( autopan: true )</code>
+          makes sure that the map center always stays visible.
+        </p>
+        <p>
+          The autopan behviour is responsive as well.
+          Try opening and closing the sidebar from this pane!
+        </p>
+      </div>
 
+      <div class="leaflet-sidebar-pane" id="information">
+        <h1 class="leaflet-sidebar-header">
+          Information
+          <span class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
+        </h1>
+        <ng-template side-panel-info-host></ng-template>
+        <!-- TESTING HERE -->
+        <script id="address-template" type="text/x-handlebars-template">
+          <p>You can find me in {{city}}. My address is {{number}} {{street}}.</p>
+        </script>
+      
+          <div class="content-placeholder"></div>
+          <!-- TESTING END -->
+      </div>
+    </div>
   </div>
+
+  <div id="mapid"></div>
+
+</div>
