Updated some wording and small sidebar changes

--- a/info-mapper/src/app/map-components/map-error/map-error.component.html
+++ b/info-mapper/src/app/map-components/map-error/map-error.component.html
@@ -5,7 +5,7 @@
         <p>(This error can also be caused due to an incorrect or misspelled URL)</p>
     </div>
     <div class="content">
-        <p>If a link has moved, you can also try accessing the <a href="/">Poudre Basin Information website</a> and navigating to the specific page.</p>
+        <p>If a link has moved, you can also try accessing the <a href="/">Info Mapper website</a> and navigating to the specific page.</p>
         <p>If you think there is a problem, please report to <a href="mailto:info@openwaterfoundation.org">info@openwaterfoundation.org</a>.</p>
     </div>
 </div>
