--- a/info-mapper/src/app/map-components/map.component.html
+++ b/info-mapper/src/app/map-components/map.component.html
@@ -12,7 +12,7 @@
         <!-- Autopan button (4 directional arrows) -->
         <li><a title="Autopan tools" href="#autopan" role="tab"><i class="fa fa-arrows"></i></a></li>
         <!---Information Button (i)-->
-        <li><a title="Information" href="#information" role="tab"><i class="fa fa-info-circle"></i></a></li>
+        <li><a title="Help / About" href="#information" role="tab"><i class="fa fa-info-circle"></i></a></li>
       </ul>
 
       <!-- bottom aligned tabs -->
@@ -115,7 +115,7 @@
 
       <div class="leaflet-sidebar-pane" id="information">
         <h1 class="leaflet-sidebar-header">
-          Information
+          Help / About
           <span class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
         </h1>
         <ng-template side-panel-info-host></ng-template>
