--- a/info-mapper/src/app/map-components/sidepanel-info/sidepanel-info.component.css
+++ b/info-mapper/src/app/map-components/sidepanel-info/sidepanel-info.component.css
@@ -1,3 +1,12 @@
-    #information-tab {
-    margin-top:15px !important;
-  }
+#information-tab {
+  margin-top:15px !important;
+  font-size: medium;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
