--- a/info-mapper/src/app/map-components/sidepanel-info/sidepanel-info.component.html
+++ b/info-mapper/src/app/map-components/sidepanel-info/sidepanel-info.component.html
@@ -1,4 +1,6 @@
 <div id="information-tab">
-    <h4> {{properties.name}} </h4>
-    <p> {{properties.description}} </p>
+  <div class="left"><b>Author:</b></div>
+  <div class="right"><b>{{properties.author}}</b></div><br>
+  <div class="left"><b>Specification Version:</b></div>
+  <div class="right"><b>{{properties.specificationVersion}}</b></div>
 </div>
