Updated to new maps with classifications in each

--- a/info-mapper/src/app/map-components/sidepanel-info/sidepanel-info.component.html
+++ b/info-mapper/src/app/map-components/sidepanel-info/sidepanel-info.component.html
@@ -1,6 +1,8 @@
 <div id="information-tab">
   <div class="left"><b>Author:</b></div>
   <div class="right"><b>{{properties.author}}</b></div><br>
+  <!--<div class="left"><b>Specification Flavor:</b></div>
+  <div class="right"><b>{{properties.specificationFlavor}}</b></div><br>-->
   <div class="left"><b>Specification Version:</b></div>
   <div class="right"><b>{{properties.specificationVersion}}</b></div>
 </div>
