--- a/info-mapper/src/app/map-components/legend-symbols/legend-symbols.component.html
+++ b/info-mapper/src/app/map-components/legend-symbols/legend-symbols.component.html
@@ -23,7 +23,7 @@
         <!-- SQUARE -->
         <div *ngIf="this.symbolData.properties.marker && this.symbolData.properties.marker.toUpperCase() == 'SQUARE'">
             <svg width="18" height="18">
-              <rect width="18" height="18" [ngStyle]="{'fill':singleSymbolKeyColors[num]}" />
+              <rect width="18" height="18" [ngStyle]="{'color':singleSymbolKeyColors[num]}" />
             </svg>
             {{symbolName}}<br><br>
         </div>
