Added basic popup functionality

--- a/info-mapper/src/app/nav-bar/nav-bar.component.html
+++ b/info-mapper/src/app/nav-bar/nav-bar.component.html
@@ -2,7 +2,15 @@
   <a class="navbar-brand" routerLink="/generic-page/home">{{title}}</a>
 
   <!-- Hamburger Icon -->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+          placement="bottom"
+          ngbTooltip="Tooltip on bottom">
     <span class="navbar-toggler-icon"></span>
   </button>
 
