--- a/info-mapper/src/app/map-components/map-layer-control/map-layer.component.css
+++ b/info-mapper/src/app/map-components/map-layer-control/map-layer.component.css
@@ -36,6 +36,7 @@
 
   /* styling for the swtich background */
   .switch {
+    border-radius: 6px;
     position: relative;
     display: inline-block;
     width: 45px;
