--- a/info-mapper/src/app/nav-bar/nav-bar.component.html
+++ b/info-mapper/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-xl navbar-light bg-light py-0">
-  <a class="navbar-brand" routerLink="/generic-page/home">{{title}}</a>
+  <a class="navbar-brand" routerLink="/content-page/home">{{title}}</a>
 
   <!-- Hamburger Icon -->
   <button class="navbar-toggler"
