Reorganized app and appo-default directories

--- a/info-mapper/src/app/map-components/legend-symbols/legend-symbols.component.html
+++ b/info-mapper/src/app/map-components/legend-symbols/legend-symbols.component.html
@@ -12,7 +12,7 @@
         </div>
         <!-- DEFAULT MARKER -->
         <div *ngIf="this.symbolData.properties.symbolShape && this.symbolData.properties.symbolShape == 'default'">
-          <img class="layer-icon" src="assets/img/marker-icon.png" height="15">
+          <img class="layer-icon" src="assets/app-default/img/marker-icon.png" height="15">
         </div>
         <!-- SQUARE -->
         <div *ngIf="this.symbolData.properties.symbolShape && this.symbolData.properties.symbolShape.toUpperCase() == 'SQUARE'">
